scode/team7/prob6/error.txt
  File "main.py", line 18
    for (j) in [u:len(l)]
                 ^
SyntaxError: invalid syntax
